Layout Test storage/indexeddb/intversion-omit-parameter.html is flaky https://bugs.webkit.org/show_bug.cgi?id=92952

Reviewed by Tony Chang.

Source/WebCore:

Account for events being propagated from the back-end to front-end after
front-end context is stopped (i.e. document is being destroyed). The IDBRequest
lifecycle was tightened up in http://trac.webkit.org/changeset/123275 with more
asserts but the stopped state wasn't accounted for.

Test: [chromium] webkit_unit_tests --gtest_filter='IDBRequestTest.EventsAfterStopping'

* Modules/indexeddb/IDBRequest.cpp:
(WebCore::IDBRequest::abort):
(WebCore::IDBRequest::onError):
(WebCore::IDBRequest::onSuccess):
(WebCore::IDBRequest::onSuccessWithContinuation):

Source/WebKit/chromium:

Added test to exercise WebCore::IDBRequest event callbacks after
the script context has stopped and ensure no asserts are hit.

* WebKit.gypi:
* tests/IDBRequestTest.cpp: Added.
(WebCore):
(WebCore::TEST):

LayoutTests:

Remove expectation now that flakiness should be resolved.

* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/111282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124974 268f45cc-cd09-0410-ab3c-d52691b4dbfc