Source/WebCore/Modules/indexeddb/IDBRequest.cpp
@@ -141,10 +141,10 @@ void IDBRequest::markEarlyDeath()
 
 void IDBRequest::abort()
 {
-    ASSERT(m_readyState == PENDING || m_readyState == DONE);
     ASSERT(!m_requestAborted);
     if (m_contextStopped || !scriptExecutionContext())
         return;
+    ASSERT(m_readyState == PENDING || m_readyState == DONE);
     if (m_readyState == DONE)
         return;
 
@@ -210,13 +210,24 @@ void IDBRequest::setResultCursor(PassRefPtr<IDBCursor> prpCursor)
     m_result = IDBAny::create(IDBCursorWithValue::fromCursor(prpCursor));
 }
 
-void IDBRequest::onError(PassRefPtr<IDBDatabaseError> error)
+bool IDBRequest::shouldEnqueueEvent() const
 {
+    if (m_contextStopped || !scriptExecutionContext())
+        return false;
     ASSERT(m_readyState == PENDING || m_readyState == DONE);
     if (m_requestAborted)
-        return;
+        return false;
     ASSERT(m_readyState == PENDING);
     ASSERT(!m_errorCode && m_errorMessage.isNull() && !m_error && !m_result);
+    return true;
+}
+
+void IDBRequest::onError(PassRefPtr<IDBDatabaseError> error)
+{
+    IDB_TRACE("IDBRequest::onError()");
+    if (!shouldEnqueueEvent())
+        return;
+
     m_errorCode = error->code();
     m_errorMessage = error->message();
     m_error = DOMError::create(IDBDatabaseException::getErrorName(error->idbCode()));
@@ -232,11 +243,9 @@ static PassRefPtr<Event> createSuccessEvent()
 void IDBRequest::onSuccess(PassRefPtr<DOMStringList> domStringList)
 {
     IDB_TRACE("IDBRequest::onSuccess(DOMStringList)");
-    ASSERT(m_readyState == PENDING || m_readyState == DONE);
-    if (m_requestAborted)
+    if (!shouldEnqueueEvent())
         return;
-    ASSERT(m_readyState == PENDING);
-    ASSERT(!m_errorCode && m_errorMessage.isNull() && !m_error && !m_result);
+
     m_result = IDBAny::create(domStringList);
     enqueueEvent(createSuccessEvent());
 }
@@ -244,11 +253,9 @@ void IDBRequest::onSuccess(PassRefPtr<DOMStringList> domStringList)
 void IDBRequest::onSuccess(PassRefPtr<IDBCursorBackendInterface> backend)
 {
     IDB_TRACE("IDBRequest::onSuccess(IDBCursor)");
-    ASSERT(m_readyState == PENDING || m_readyState == DONE);
-    if (m_requestAborted)
+    if (!shouldEnqueueEvent())
         return;
-    ASSERT(m_readyState == PENDING);
-    ASSERT(!m_errorCode && m_errorMessage.isNull() && !m_error && !m_result);
+
     ASSERT(m_cursorType != IDBCursorBackendInterface::InvalidCursorType);
     RefPtr<IDBCursor> cursor;
     if (m_cursorType == IDBCursorBackendInterface::IndexKeyCursor)
@@ -263,12 +270,7 @@ void IDBRequest::onSuccess(PassRefPtr<IDBCursorBackendInterface> backend)
 void IDBRequest::onSuccess(PassRefPtr<IDBDatabaseBackendInterface> backend)
 {
     IDB_TRACE("IDBRequest::onSuccess(IDBDatabase)");
-    ASSERT(m_readyState == PENDING || m_readyState == DONE);
-    if (m_requestAborted)
-        return;
-    ASSERT(m_readyState == PENDING);
-    ASSERT(!m_errorCode && m_errorMessage.isNull() && !m_error && !m_result);
-    if (m_contextStopped || !scriptExecutionContext())
+    if (!shouldEnqueueEvent())
         return;
 
     RefPtr<IDBDatabase> idbDatabase = IDBDatabase::create(scriptExecutionContext(), backend);
@@ -281,11 +283,9 @@ void IDBRequest::onSuccess(PassRefPtr<IDBDatabaseBackendInterface> backend)
 void IDBRequest::onSuccess(PassRefPtr<IDBKey> idbKey)
 {
     IDB_TRACE("IDBRequest::onSuccess(IDBKey)");
-    ASSERT(m_readyState == PENDING || m_readyState == DONE);
-    if (m_requestAborted)
+    if (!shouldEnqueueEvent())
         return;
-    ASSERT(m_readyState == PENDING);
-    ASSERT(!m_errorCode && m_errorMessage.isNull() && !m_error && !m_result);
+
     if (idbKey && idbKey->isValid())
         m_result = IDBAny::create(idbKey);
     else
@@ -296,17 +296,16 @@ void IDBRequest::onSuccess(PassRefPtr<IDBKey> idbKey)
 void IDBRequest::onSuccess(PassRefPtr<IDBTransactionBackendInterface> prpBackend)
 {
     IDB_TRACE("IDBRequest::onSuccess(IDBTransaction)");
-    ASSERT(m_readyState == PENDING || m_readyState == DONE);
-    if (m_requestAborted)
-        return;
-    ASSERT(m_readyState == PENDING);
-    ASSERT(!m_errorCode && m_errorMessage.isNull() && !m_error && !m_result);
     RefPtr<IDBTransactionBackendInterface> backend = prpBackend;
 
     if (m_contextStopped || !scriptExecutionContext()) {
-        backend->abort();
+        // Should only be null in tests.
+        if (backend.get())
+            backend->abort();
         return;
     }
+    if (!shouldEnqueueEvent())
+        return;
 
     RefPtr<IDBTransaction> frontend = IDBTransaction::create(scriptExecutionContext(), backend, IDBTransaction::VERSION_CHANGE, m_source->idbDatabase().get());
     backend->setCallbacks(frontend.get());
@@ -322,11 +321,9 @@ void IDBRequest::onSuccess(PassRefPtr<IDBTransactionBackendInterface> prpBackend
 void IDBRequest::onSuccess(PassRefPtr<SerializedScriptValue> serializedScriptValue)
 {
     IDB_TRACE("IDBRequest::onSuccess(SerializedScriptValue)");
-    ASSERT(m_readyState == PENDING || m_readyState == DONE);
-    if (m_requestAborted)
+    if (!shouldEnqueueEvent())
         return;
-    ASSERT(m_readyState == PENDING);
-    ASSERT(!m_errorCode && m_errorMessage.isNull() && !m_error && !m_result);
+
     m_result = IDBAny::create(serializedScriptValue);
     m_pendingCursor.clear();
     enqueueEvent(createSuccessEvent());
@@ -347,8 +344,10 @@ static PassRefPtr<IDBObjectStore> effectiveObjectStore(PassRefPtr<IDBAny> source
 
 void IDBRequest::onSuccess(PassRefPtr<SerializedScriptValue> prpSerializedScriptValue, PassRefPtr<IDBKey> prpPrimaryKey, const IDBKeyPath& keyPath)
 {
-    if (m_requestAborted)
+    IDB_TRACE("IDBRequest::onSuccess(SerializedScriptValue, IDBKey, IDBKeyPath)");
+    if (!shouldEnqueueEvent())
         return;
+
 #ifndef NDEBUG
     ASSERT(keyPath == effectiveObjectStore(m_source)->keyPath());
 #endif
@@ -373,10 +372,9 @@ void IDBRequest::onSuccess(PassRefPtr<SerializedScriptValue> prpSerializedScript
 void IDBRequest::onSuccessWithContinuation()
 {
     IDB_TRACE("IDBRequest::onSuccessWithContinuation");
-    ASSERT(m_readyState == PENDING || m_readyState == DONE);
-    if (m_requestAborted)
+    if (!shouldEnqueueEvent())
         return;
-    ASSERT(!m_errorCode && m_errorMessage.isNull() && !m_error && !m_result);
+
     ASSERT(m_pendingCursor);
     setResultCursor(m_pendingCursor.release());
     enqueueEvent(createSuccessEvent());
